# eda_emissions

./: buil.sh  build.sh  informe_emisiones.html  main.py  pyproject.toml  requirements.txt
graficos/: missing_data.html  obs_value_stats.html  top_correlations.html
