[project]
name = "pyproject-toml"
version = "1"
description = ""
authors = [
    {name = "Ana L. Silva"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "pyproject"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
